# task-102

./: .gitignore  CMakeLists.txt  README.md
proto/: CMakeLists.txt
src/: CMakeLists.txt  DelimitedMessagesStreamParser.h  parseDelimited.h  serializeDelimited.h
src/protobuf_parser/: DelimitedMessagesStreamParser.hpp  helpers.hpp
test/: CMakeLists.txt  Test_DelimitedMessagesStreamParser.cpp  Test_Helpers.cpp  test.cpp
